@@ -15,6 +15,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+include/map.h, include/player.h: Fix 'comma at end of enumerator list' warnings.
 types/food/food.c: Fix missing math.h include. (Harmless but caused a warning)
 Alex Schultz 2007-06-21
 
